Name:           Scurry
Version:        0.1.0
Category:       Network
Description:    A distributed VPN written in Haskell.
License:        BSD3
License-File:   LICENSE
Author:         John Van Enk
Maintainer:     vanenkj@gmail.com
Copyright:      John Van Enk, 2009

Build-Type:     Simple
Cabal-Version:  >= 1.2.0

Data-Files:     ui/index.html

executable scurry
    build-depends: base     >= 4        && < 5
    build-depends: binary   >= 0.5.0.1  && < 0.6
    build-depends: network  >= 2.2.1.1  && < 2.3
    build-depends: bytestring
                            >= 0.9.1.4  && < 0.9.2
    build-depends: network-bytestring
                            >= 0.1.2.1  && < 0.2
    build-depends: directory
                            >= 1.0.0.3  && < 1.0.1
    build-depends: hack-handler-happstack
                            >= 2009.6.5 && < 2009.7
    build-depends: hack
                            >= 2009.5.19 && < 2009.6

    hs-source-dirs:     src
    ghc-options:        -Wall -threaded
    main-is:            scurry.hs

    if os(mingw32)
        c-sources:          src/C/help-win.c
        extra-libraries:    Iphlpapi, ws2_32
        cc-options:         -D MINGW32
        cpp-options:        -DCALLCONV=stdcall

    if os(linux)
        build-depends: unix >= 2.3.0.0
        c-sources:          src/C/help-linux.c
        cc-options:         -D LINUX
        cpp-options:        -DCALLCONV=ccall

    if os(darwin) || os(freebsd)
        build-depends: unix >= 2.3.0.0
        c-sources:          src/C/help-bsd.c
        cc-options:         -D BSD
        cpp-options:        -DCALLCONV=ccall

