Name:           Scurry
Version:        0.1.0
Category:       Network
Description:    A distributed VPN written in Haskell.
License:        BSD3
License-File:   LICENSE
Author:         John Van Enk
Maintainer:     vanenkj@gmail.com
Copyright:      John Van Enk, 2009

Build-Type:     Simple
Cabal-Version:  >= 1.2.0

Data-Files:     ui/index.html,
                ui/jquery-1.3.1.js,
                ui/style.css,
                ui/script.js

Extra-Source-Files: src/C/help.h

executable scurry
    build-depends: base                     >= 4        && < 5,
                   binary                   >= 0.5.0.0,
                   network                  >= 2.2.1.1  && < 2.3,
                   mtl                      >= 1.1.0.2  && < 1.1.1,
                   html                     >= 1.0.1.2  && < 1.0.2,
                   bytestring               >= 0.9.1.4  && < 0.9.2,
                   network-bytestring       >= 0.1.2.1  && < 0.2,
                   directory                >= 1.0.0.3  && < 1.0.1,
                   httpd-shed               >= 0.4      && < 0.5,
                   json                     >= 0.4.3    && < 0.5,
                   HsOpenSSL                >= 0.6.5    && < 0.7


    hs-source-dirs:     src
    ghc-options:        -Wall -threaded
    main-is:            scurry.hs
    cc-options:         -Wall

    if os(mingw32)
        c-sources:          src/C/help-win.c
        extra-libraries:    Iphlpapi, ws2_32
        cc-options:         -D MINGW32
        cpp-options:        -DCALLCONV=stdcall

    if os(linux)
        build-depends:      unix >= 2.3.0.0
        c-sources:          src/C/help-linux.c
        cc-options:         -D LINUX
        cpp-options:        -DCALLCONV=ccall

    if os(darwin) || os(freebsd)
        build-depends:      unix >= 2.3.0.0
        c-sources:          src/C/help-bsd.c
        cc-options:         -D BSD
        cpp-options:        -DCALLCONV=ccall

