Name:           Scurry
Version:        0.1.0
Category:       Network
Description:    A distributed VPN written in Haskell.
License:        BSD3
License-File:   LICENSE
Author:         John Van Enk
Maintainer:     vanenkj@gmail.com
Copyright:      John Van Enk, 2009

Build-Type:     Simple
Cabal-Version:  >= 1.2.0

Data-Files: ui/css/humanity/jquery-ui-1.8.custom.css,
            ui/css/humanity/images/ui-icons_f08000_256x240.png,
            ui/css/humanity/images/ui-bg_highlight-hard_65_fee4bd_1x100.png,
            ui/css/humanity/images/ui-icons_ffffff_256x240.png,
            ui/css/humanity/images/ui-bg_glass_70_ede4d4_1x400.png,
            ui/css/humanity/images/ui-icons_f35f07_256x240.png,
            ui/css/humanity/images/ui-icons_cb672b_256x240.png,
            ui/css/humanity/images/ui-icons_ff7519_256x240.png,
            ui/css/humanity/images/ui-bg_inset-soft_100_f4f0ec_1x100.png,
            ui/css/humanity/images/ui-bg_glass_25_cb842e_1x400.png,
            ui/css/humanity/images/ui-bg_flat_75_aaaaaa_40x100.png,
            ui/css/humanity/images/ui-icons_c47a23_256x240.png,
            ui/css/humanity/images/ui-bg_highlight-hard_75_f5f5b5_1x100.png,
            ui/css/humanity/images/ui-bg_glass_100_f5f0e5_1x400.png,
            ui/css/humanity/images/ui-bg_highlight-hard_100_f4f0ec_1x100.png,
            ui/scurry.html,
            ui/script.js,
            ui/style.css,
            ui/js/jquery.uuid.js,
            ui/js/jquery-1.4.2.min.js,
            ui/js/jquery-ui-1.8.custom.min.js
                

Extra-Source-Files: src/C/help.h

executable scurry
    build-depends: base                     >= 4        && < 5,
                   binary                   >= 0.5.0.0,
                   network                  >= 2.2.1.1  && < 2.3,
                   mtl                      >= 1.1.0.2  && < 1.1.1,
                   html                     >= 1.0.1.2  && < 1.0.2,
                   bytestring               >= 0.9.1.4  && < 0.9.2,
                   network-bytestring       >= 0.1.2.1  && < 0.2,
                   directory                >= 1.0.0.3  && < 1.0.1,
                   httpd-shed               >= 0.4      && < 0.5,
                   json                     >= 0.4.3    && < 0.5,
                   HsOpenSSL                >= 0.6.5    && < 0.7,
                   tuntap                   >= 0.0.2.1  && < 0.1.0,
                   stm                      >= 2.1.1.2  && < 2.1.2


    hs-source-dirs:     src
    ghc-options:        -Wall -threaded
    main-is:            scurry.hs
    cc-options:         -Wall
